# ddm

./: .hgignore  AUTHORS  AboutBoxDialog.h  AboutBoxDialog.ui  AbstractCodepageSupplier.cpp  AbstractCodepageSupplier.h  AbstractDTSupplier.cpp  AbstractDTSupplier.h  AbstractIndextypeProvider.cpp  AbstractIndextypeProvider.h  AbstractSQLGenerator.h  AbstractStorageEngine.cpp  AbstractStorageEngine.h  AbstractStorageEngineListProvider.cpp  AbstractStorageEngineListProvider.h  BinaryWhereExpressionQueryComponent.cpp  BinaryWhereExpressionQueryComponent.h  BrowseTableForm.cpp  BrowseTableForm.h  BrowseTableForm.ui  CMakeLists.txt  Cell.cpp  Cell.h  CellAsCommand.cpp  CellAsCommand.h  CellClose.cpp  CellClose.h  CellCommand.cpp  CellCommand.h  CellForBinaryWhereExpression.cpp  CellForBinaryWhereExpression.h  CellForUnaryWhereExpression.cpp  CellForUnaryWhereExpression.h  CellFromCommand.cpp  CellFromCommand.h  CellGroupByCommand.cpp  CellGroupByCommand.h  CellJoinCommand.cpp  CellJoinCommand.h  CellOrderByCommand.cpp  (+454 more)
src/: CMakeLists.txt  ClipboardFactory.cpp  ClipboardFactory.h  Configuration.cpp  Configuration.h  DeserializationFactory.cpp  DeserializationFactory.h  DocumentationGenerator.cpp  DocumentationGenerator.h  FkRelationDescriptor.cpp  FkRelationDescriptor.h  NameGenerator.cpp  NameGenerator.h  SpsTooltipProviderForUid.cpp  SqlNamesValidator.cpp  SqlNamesValidator.h  StartupValuesHelper.cpp  TableUpdateGenerator.cpp  TableUpdateGenerator.h  UidWarehouse.cpp  UidWarehouse.h  VersionUpdateGenerator.cpp  VersionUpdateGenerator.h  Workspace.cpp  Workspace.h  addressbook.dmx  classic.css  commons.h  core_enums.h  crea.xml  db_DatabaseEngineManager.cpp  db_DatabaseEngineManager.h  dbm.pro  dbm.qrc  ddm.iss  ddm_strings.h  help.config  helper_MostRecentlyUsedFiles.cpp  helper_MostRecentlyUsedFiles.h  helper_utils.cpp  (+4 more)
src/connections/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  MySqlConnection.cpp  MySqlConnection.h  SqliteConnection.cpp  SqliteConnection.h  conn_AuthenticatedConnection.cpp  conn_AuthenticatedConnection.h  conn_CUBRID.cpp  conn_CUBRID.h  conn_Postgres.cpp  conn_Postgres.h  connections.pri
src/core/: ActionDeleteTable.h  CMakeLists.txt  CopyableElement.h  DefaultVersionImplementation.cpp  DefaultVersionImplementation.h  DeploymentInitiator.cpp  DeploymentInitiator.h  ForeignKey.cpp  ForeignKey.h  Index.cpp  Index.h  MajorVersion.cpp  MajorVersion.h  ObjectWithSpInstances.cpp  ObjectWithSpInstances.h  Project.cpp  Project.h  SerializableElement.h  Solution.h  SpInstance.cpp  SpInstance.h  TrueFalseSp.cpp  TrueFalseSp.h  TrueFalseSpInstance.cpp  ValueListSp.h  ValueListSpInstance.cpp  ValueListSpInstance.h  ValueSp.cpp  ValueSp.h  ValueSpInstance.cpp  Version.h  core.pri  core_CloneableElement.h  core_Column.cpp  core_Column.h  core_ColumnWithValue.h  core_Connection.cpp  core_Connection.h  core_CopyableElement.h  core_Deployer.cpp  (+42 more)
src/db/: CMakeLists.txt  DefaultDatabaseEngine.cpp  db.pri  db_AbstractDTSupplier.h  db_AbstractSQLGenerator.h  db_AdvancedSqlGenerator.cpp  db_AdvancedSqlGenerator.h  db_BasicSqlGenerator.cpp  db_BasicSqlGenerator.h  db_DatabaseBuiltinFunction.h  db_DatabaseBuiltinFunctionsParameter.h  db_DatabaseEngine.cpp  db_DatabaseEngine.h  db_DatabaseFunctionCategory.h  db_DefaultDatabaseEngine.cpp  db_DefaultDatabaseEngine.h  db_GenericDTSupplier.cpp  db_GenericDTSupplier.h  db_GenericDatabaseType.h  db_RepositoryQuery.cpp  db_RepositoryQuery.h  db_SP.cpp  db_SP.h  db_SpCollection.h
src/dbcubrid/: CMakeLists.txt  dbcubrid.pri  dbcubrid_DTSupplier.cpp  dbcubrid_DTSupplier.h  dbcubrid_DatabaseEngine.cpp  dbcubrid_DatabaseEngine.h  dbcubrid_SQLGenerator.cpp  dbcubrid_SQLGenerator.h
src/dbmysql/: CMakeLists.txt  dbmysql.pri  dbmysql_DatabaseEngine.cpp  dbmysql_DatabaseEngine.h  dbmysql_MySQLDTSupplier.cpp  dbmysql_MySQLDTSupplier.h  dbmysql_MySQLDatabaseEngine.cpp  dbmysql_MySQLDatabaseEngine.h  dbmysql_MySQLSQLGenerator.cpp  dbmysql_MySQLSQLGenerator.h  dbmysql_SQLGenerator.cpp  dbmysql_SQLGenerator.h
src/dbpostgres/: CMakeLists.txt  dbpostgres.pri  dbpostgres_DatabaseEngine.cpp  dbpostgres_DatabaseEngine.h  dbpostgres_SQLGenerator.cpp  dbpostgres_SQLGenerator.h
src/dbsqlite/: CMakeLists.txt  dbsqlite.pri  dbsqlite_DatabaseEngine.cpp  dbsqlite_DatabaseEngine.h  dbsqlite_SQLGenerator.cpp  dbsqlite_SQLGenerator.h  dbsqlite_SqliteDTSupplier.cpp  dbsqlite_SqliteDTSupplier.h  dbsqlite_SqliteDatabaseEngine.cpp  dbsqlite_SqliteDatabaseEngine.h  dbsqlite_SqliteSQLGenerator.cpp  dbsqlite_SqliteSQLGenerator.h
src/debian/: control  rules
src/diagram/: CMakeLists.txt  dgram_DiagramFKDescriptor.cpp  dgram_DiagramItemFactory.cpp  dgram_DiagramNoteDescriptor.cpp  dgram_DiagramNoteDescriptor.h  dgram_DiagramObjectDescriptor.h  dgram_DiagramTableDescriptor.cpp  dgram_DraggableGraphicsItem.cpp  dgram_DraggableGraphicsItem.h  dgram_DraggableGraphicsItemForForeignKey.h  dgram_DraggableGraphicsItemForText.h  dgram_DraggableGraphicsViewItemForForeignKey.cpp  dgram_DraggableGraphicsViewItemForText.cpp  dgram_ERGraphicsScene.cpp  dgram_ERGraphicsScene.h  diagram.pri
src/doc/: brows.html  conn.html  depl.html  doc.html  main.html  newp.html  proc.html  queryb.html  reveng.html  sqls.html  startup.html  tabl.html  tinst.html  trig.html  upd.html  view.html
src/gui/: AboutBoxDialog.cpp  AboutBoxDialog.ui  BrowseTableForm.cpp  BrowseTableForm.h  BrowseTableForm.ui  CMakeLists.txt  ConnectionGuiElements.cpp  ConnectionGuiElements.h  ContextMenuCollection.cpp  ContextMenuCollection.h  ContextMenuEnabledTreeWidget.h  CreateTableInstancesDialog.ui  DataTypesListForm.h  DataTypesListForm.ui  DiagramForm.cpp  DiagramForm.ui  DocumentationForm.cpp  DocumentationForm.ui  FrameForLineNumbers.cpp  GuiElements.cpp  GuiElements.h  IconFactory.h  IconedDockWidget.h  InjectSqlDialog.cpp  InjectSqlDialog.h  InjectSqlDialog.ui  InsertNewRecordDialog.cpp  InsertNewRecordDialog.h  InsertNewRecordDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowButtonDialog.cpp  MainWindowButtonDialog.h  MainWindowButtonDialog.ui  (+70 more)
(+410 files in other folders)
